# consoleme/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2020-10-26T20:16:01+00:00
+#   timestamp: 2020-10-27T19:43:57+00:00
 
 from __future__ import annotations
 
@@ -184,12 +184,23 @@ class Action(Enum):
 
 
 class TagAction(Enum):
+    create = "create"
     update = "update"
     delete = "delete"
 
 
 class ResourceTagChangeModel(ChangeModel):
-    key: str
+    original_key: Optional[str] = Field(
+        None,
+        description="original_key is used for renaming a key to something else. This is optional.",
+        example="key_to_be_renamed",
+    )
+    key: str = Field(
+        ...,
+        description="This is the desired key name for the tag. If a tag key is being renamed, this is what it will be renamed\nto. Otherwise, this key name will be used when creating or updating a tag.",
+        example="desired_key_name",
+    )
+    original_value: Optional[str] = None
     value: Optional[str] = None
     change_type: Optional[constr(regex="resource_tag")] = None
     tag_action: Optional[TagAction] = None
