# swagger.yaml
@@ -785,9 +785,19 @@ components:
         - type: object
           required:
             - key
-            - action
+            - tag_action
           properties:
+            original_key:
+              type: string
+              example: key_to_be_renamed
+              description: original_key is used for renaming a key to something else. This is optional.
             key:
+              type: string
+              example: desired_key_name
+              description: |-
+                This is the desired key name for the tag. If a tag key is being renamed, this is what it will be renamed
+                to. Otherwise, this key name will be used when creating or updating a tag.
+            original_value:
               type: string
             value:
               type: string
@@ -797,6 +807,7 @@ components:
             tag_action:
               type: string
               enum:
+                - create
                 - update
                 - delete
     AssumeRolePolicyChangeModel:
